--- a/arch/arm/configs/boeffla_c1lgt_defconfig
+++ b/arch/arm/configs/boeffla_c1lgt_defconfig
@@ -455,9 +455,9 @@ CONFIG_ANDROID_WIP=y
 # CONFIG_MACH_U1 is not set
 # CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_MACH_PX is not set
-CONFIG_TARGET_LOCALE_EUR=y
+# CONFIG_TARGET_LOCALE_EUR is not set
 # CONFIG_TARGET_LOCALE_LTN is not set
-# CONFIG_TARGET_LOCALE_KOR is not set
+CONFIG_TARGET_LOCALE_KOR=y
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
 # CONFIG_TARGET_LOCALE_NA is not set
@@ -465,11 +465,14 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_NTT is not set
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
-# CONFIG_TARGET_LOCALE_USA is not set
+CONFIG_MACH_C1_KOR_SKT=y
+# CONFIG_MACH_C1_KOR_KT is not set
+# CONFIG_MACH_C1_KOR_LGT is not set
+CONFIG_MACH_C1_SKT_FOR_LGT=y
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
-CONFIG_MACH_M0=y
-# CONFIG_MACH_C1 is not set
+# CONFIG_MACH_M0 is not set
+CONFIG_MACH_C1=y
 # CONFIG_MACH_M3 is not set
 # CONFIG_MACH_P4NOTE is not set
 # CONFIG_MACH_GC1 is not set
@@ -553,13 +556,13 @@ CONFIG_EHCI_MODEM_PORTNUM=2
 # CONFIG_LTE_VIA_SWITCH is not set
 # CONFIG_SEC_DUAL_MODEM_MODE is not set
 # CONFIG_SEC_MODEM_M0_C2C is not set
-CONFIG_SEC_MODEM_M0=y
+# CONFIG_SEC_MODEM_M0 is not set
 # CONFIG_SEC_MODEM_M0_CTC is not set
 # CONFIG_SEC_MODEM_T0_CU_DUOS is not set
 # CONFIG_SEC_MODEM_T0_OPEN_DUOS is not set
 # CONFIG_SEC_MODEM_M0_GRANDECTC is not set
 # CONFIG_SEC_MODEM_M1 is not set
-# CONFIG_SEC_MODEM_C1 is not set
+CONFIG_SEC_MODEM_C1=y
 # CONFIG_SEC_MODEM_C1_LGT is not set
 # CONFIG_SEC_MODEM_M2 is not set
 # CONFIG_SEC_MODEM_U1 is not set
@@ -1283,19 +1286,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
-CONFIG_DMA_CMA=y
-# CONFIG_DMA_CMA_DEBUG is not set
-
-#
-# Default contiguous memory area size:
-#
-CONFIG_CMA_SIZE_MBYTES=16
-CONFIG_CMA_SIZE_SEL_MBYTES=y
-# CONFIG_CMA_SIZE_SEL_PERCENTAGE is not set
-# CONFIG_CMA_SIZE_SEL_MIN is not set
-# CONFIG_CMA_SIZE_SEL_MAX is not set
-CONFIG_CMA_ALIGNMENT=8
-CONFIG_CMA_AREAS=7
+# CONFIG_DMA_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -1347,14 +1338,14 @@ CONFIG_UID_STAT=y
 # CONFIG_WIMAX_CMC is not set
 # CONFIG_SEC_DEV_JACK is not set
 # CONFIG_MUIC_DET_JACK is not set
-# CONFIG_FM34_WE395 is not set
+CONFIG_FM34_WE395=y
 # CONFIG_AUDIENCE_ES305 is not set
 # CONFIG_2MIC_FM34_WE395 is not set
 # CONFIG_MUIC_MAX77693_SEPARATE_MHL_PORT is not set
 CONFIG_MUIC_MAX77693_SUPPORT_OTG_AUDIO_DOCK=y
 CONFIG_MUIC_MAX77693_SUPPORT_SMART_DOCK=y
 CONFIG_MUIC_MAX77693_SUPPORT_CAR_DOCK=y
-# CONFIG_USBHUB_USB3503 is not set
+CONFIG_USBHUB_USB3503=y
 # CONFIG_USBHUB_USB3503_OTG_CONN is not set
 # CONFIG_USBHUB_USB3803 is not set
 # CONFIG_PN544 is not set
@@ -1383,11 +1374,11 @@ CONFIG_UID_CPUTIME=y
 # CONFIG_SAMSUNG_C2C is not set
 CONFIG_SEC_MODEM=y
 # CONFIG_UMTS_MODEM_XMM6260 is not set
-CONFIG_UMTS_MODEM_XMM6262=y
+# CONFIG_UMTS_MODEM_XMM6262 is not set
 # CONFIG_CDMA_MODEM_CBP71 is not set
 # CONFIG_CDMA_MODEM_CBP72 is not set
 # CONFIG_CDMA_MODEM_CBP82 is not set
-# CONFIG_LTE_MODEM_CMC221 is not set
+CONFIG_LTE_MODEM_CMC221=y
 # CONFIG_UMTS_MODEM_SS222 is not set
 # CONFIG_CDMA_MODEM_MDM6600 is not set
 # CONFIG_TDSCDMA_MODEM_SPRD8803 is not set
@@ -1402,8 +1393,8 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_LINK_DEVICE_SPI is not set
 # CONFIG_BOOT_DEVICE_SPI is not set
 # CONFIG_WORKQUEUE_FRONT is not set
-# CONFIG_IPC_CMC22x_OLD_RFS is not set
-# CONFIG_SIPC_VER_5 is not set
+CONFIG_IPC_CMC22x_OLD_RFS=y
+CONFIG_SIPC_VER_5=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
@@ -1499,7 +1490,7 @@ CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_WIFI_BROADCOM_COB is not set
-CONFIG_WLAN_REGION_CODE=100
+CONFIG_WLAN_REGION_CODE=201
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -2255,7 +2246,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
-CONFIG_USE_FIMC_CMA=y
 CONFIG_VIDEO_FIMC_RANGE_NARROW=y
 # CONFIG_VIDEO_FIMC_RANGE_WIDE is not set
 # CONFIG_VIDEO_FIMC_DEBUG is not set
@@ -2281,7 +2271,6 @@ CONFIG_LSI_HDMI_AUDIO_CH_EVENT=y
 CONFIG_VIDEO_MFC5X=y
 CONFIG_VIDEO_MFC_MAX_INSTANCE=4
 # CONFIG_VIDEO_MFC5X_DEBUG is not set
-CONFIG_USE_MFC_CMA=y
 # CONFIG_VIDEO_MALI400MP is not set
 # CONFIG_VIDEO_UMP is not set
 CONFIG_VIDEO_FIMG2D=y
@@ -2331,7 +2320,16 @@ CONFIG_SAMSUNG_SMARTDOCK=y
 CONFIG_SAMSUNG_WORKAROUND_HPD_GLANCE=y
 # CONFIG_SAMSUNG_MHL_UNPOWERED is not set
 # CONFIG_RADIO_ADAPTERS is not set
-# CONFIG_TDMB is not set
+CONFIG_TDMB=y
+CONFIG_TDMB_SPI=y
+# CONFIG_TDMB_EBI is not set
+# CONFIG_TDMB_TSIF is not set
+# CONFIG_TDMB_VENDOR_FCI is not set
+# CONFIG_TDMB_VENDOR_INC is not set
+CONFIG_TDMB_VENDOR_RAONTECH=y
+CONFIG_TDMB_MTV318=y
+# CONFIG_TDMB_VENDOR_TELECHIPS is not set
+# CONFIG_TDMB_SIMUL is not set
 # CONFIG_ISDBT is not set
 
 #
@@ -2402,7 +2400,9 @@ CONFIG_AID_DIMMING=y
 CONFIG_LCD_FREQ_SWITCH=y
 # CONFIG_LCD_FREQ_SWITCH_ACCOUNTING is not set
 CONFIG_CPU_FREQ_LCD_FREQ_DFS=y
-# CONFIG_FB_S5P_EXTDSP is not set
+CONFIG_FB_S5P_EXTDSP=y
+# CONFIG_FB_S5P_EXTDSP_DEBUG is not set
+CONFIG_FB_S5P_EXTDSP_NR_BUFFERS=3
 # CONFIG_S5P_DSIM_SWITCHABLE_DUAL_LCD is not set
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
@@ -3012,9 +3012,6 @@ CONFIG_CLKDEV_LOOKUP=y
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77693=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
-CONFIG_FM_RADIO=y
-# CONFIG_FM_SI4709 is not set
-CONFIG_FM_SI4705=y
 CONFIG_SENSORS_CORE=y
 CONFIG_SENSORS_AK8975C=y
 # CONFIG_SENSORS_AK8963C is not set
